test/lattests/bad/declInWhile.lat
boolean foo() { return false; }

int main() {
    while (foo()) int x = 42;

    printInt(x);

    return 0;
}